# cs374-graph-stats-extractor

./: README.md  data.csv  pyproject.toml  scatter_extractor_design_doc.md
src/scatter_extractor/: __init__.py  calibration.py  cli.py  detector.py  models.py  stats.py
tests/: test_calibration.py  test_detector.py
