[project]
name = "scatter-extractor"
version = "0.1.0"
description = "Extract coordinate pairs from scatter plot images"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "click>=8.1.0",
    "pillow>=10.0.0",
]

[project.scripts]
scatter-extractor = "scatter_extractor.cli:extract"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scatter_extractor"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
